--- a/app/src/main/res/menu/menuwithsave.xml
+++ b/app/src/main/res/menu/menuwithsave.xml
@@ -15,7 +15,7 @@
 
     <item
         android:id="@+id/closeapp"
-        android:title="Close App"
+        android:title="Back"
         app:showAsAction="never"/>
 
 </menu>
