--- a/app/src/main/res/layout/activity_calibration.xml
+++ b/app/src/main/res/layout/activity_calibration.xml
@@ -20,9 +20,17 @@
         app:layout_constraintStart_toStartOf="@+id/guide1"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <hummfinderapp.alpha.calibration.Spectrum
+        android:id="@+id/spektrum"
+        android:layout_width="304dp"
+        android:layout_height="205dp"
+        app:layout_constraintEnd_toEndOf="@+id/calibrationspektrum"
+        app:layout_constraintStart_toStartOf="@+id/calibrationspektrum"
+        app:layout_constraintTop_toTopOf="@+id/calibrationspektrum" />
+
     <ImageView
         android:id="@+id/calibrationspektrum"
-        android:layout_width="0dp"
+        android:layout_width="300dp"
         android:layout_height="@dimen/calMockViewHeight"
         android:background="@color/lightGray"
         android:contentDescription="@string/todo"
@@ -42,18 +50,20 @@
         android:src="@drawable/ic_baseline_exposure_plus_1_24"
         app:layout_constraintBottom_toBottomOf="@+id/calSeekBar"
         app:layout_constraintEnd_toStartOf="@+id/guide2"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/calSeekBar"
         app:layout_constraintTop_toTopOf="@+id/calSeekBar"
         tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,ImageContrastCheck" />
 
     <SeekBar
         android:id="@+id/calSeekBar"
-        android:layout_width="0dp"
+        android:layout_width="233dp"
         android:layout_height="wrap_content"
         android:progressTint="@color/black"
         android:thumbTint="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/btnCalPlay"
         app:layout_constraintEnd_toStartOf="@+id/calPlusButton"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/calMinusButton"
         app:layout_constraintTop_toBottomOf="@+id/calibrationspektrum" />
 
@@ -67,6 +77,7 @@
         android:src="@drawable/ic_baseline_exposure_neg_1_24"
         app:layout_constraintBottom_toBottomOf="@+id/calSeekBar"
         app:layout_constraintEnd_toStartOf="@+id/calSeekBar"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/guide1"
         app:layout_constraintTop_toTopOf="@+id/calSeekBar"
         tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />
@@ -84,38 +95,6 @@
         app:layout_constraintStart_toStartOf="@+id/guide1"
         app:layout_constraintTop_toBottomOf="@+id/calSeekBar"
         tools:ignore="SpeakableTextPresentCheck" />
-
-    <TextView
-        android:id="@+id/ZeroHZ"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:text="@string/_0_hz"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/guide1"
-        app:layout_constraintTop_toBottomOf="@+id/calibrationspektrum" />
-
-    <TextView
-        android:id="@+id/HundertHz"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/_100_hz"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@+id/TwohundredHz"
-        app:layout_constraintStart_toStartOf="@+id/ZeroHZ"
-        app:layout_constraintTop_toBottomOf="@+id/calibrationspektrum" />
-
-    <TextView
-        android:id="@+id/TwohundredHz"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/_200_hz"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/guide2"
-        app:layout_constraintTop_toTopOf="@+id/HundertHz" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guide1"
