--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -23,4 +23,5 @@
 
     <!--Matching Activity-->
     <dimen name="matButtonDimensions">48dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
